cluster/netpols/allow-ingress-controller/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  podSelector: {}
  ingress:
    # Allow traffic from gateway controllers
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "agentgateway"
